thoughts added
