# src/facade/api/app.py
@@ -5,6 +5,7 @@ from flasgger import Swagger
 from config.rootPath import getRootPath
 from src.resources.messageResource import MessageResource, MessagesResource
 from src.resources.metaDataResource import GamesResource, GameResource
+from src.resources.thoughtsResource import ThoughtResource, ThoughtsResource
 
 app = Flask(__name__)
 api = Api(app)
@@ -21,3 +22,5 @@ api.add_resource(MessageResource, "/api/v1/message")
 api.add_resource(MessagesResource, "/api/v1/messages")
 api.add_resource(GameResource, "/api/v1/game")
 api.add_resource(GamesResource, "/api/v1/games")
+api.add_resource(ThoughtResource, "/api/v1/thought")
+api.add_resource(ThoughtsResource, "/api/v1/thoughts")
